# PCBKo

./: .env.example  .gitignore  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt  run_gui.py  start.sh
.github/workflows/: python-package.yml
examples/: blink_led.json
src/: ai_visual_reviewer.py  checks.py  circuit_simulator.py  component_autofill.py  config.py  deepseek_agent.py  footprint_finder.py  gui.py  i18n.py  kicad_bootstrap.py  kicad_generator.py  kicad_pcb_worker.py  layout_outputs.py  layout_router.py  main.py  models.py  orchestrator.py  pcb_revisor.py  pcbnew_script_generator.py  placement_canvas.py  plan_normalizer.py  qt_gui.py  schematic_canvas.py  visualizer.py
